--- a/src/components/regions/header/header.scss
+++ b/src/components/regions/header/header.scss
@@ -22,7 +22,7 @@
   }
 
   .dark-mode-toggle {
-    margin-right: 50px;
+    margin-right: 60px;
 
     @include smallUp {
       margin-right: 0;
